# subcompose

./: .bandit  .bandit.ini  .gitignore  Makefile  README.md  banner.txt  pyproject.toml
.github/workflows/: code-quality-and-tests.yaml  delete-workflow-runs.yml  pages-build-deployment.yaml  release-test.yaml  release.yaml
docs/: api.rst  changelog.rst  cli.rst  conf.py  index.rst  installation.rst  requirements.txt  usage.rst
examples/: compose.yaml
src/subcompose/: __init__.py  __main__.py  cli.py  constants.py  filtering.py  logger.py  parsing.py  substitution.py  utils.py  validation.py
tests/: test_cli.py  test_dependencies.py  test_extension.py  test_filtering.py  test_groups.py  test_substitution.py  test_utils.py  test_validation.py  test_volumes.py
